ci(release): updated branch name in releaserc file

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,6 +1,7 @@
 preset: angular
 branches:
-  - main
+  - release
+
 plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
