chore: replaced yarn with npm

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,4 +36,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          npx -p @semantic-release/changelog -p @semantic-release/exec -p @semantic-release/git semantic-release
+          npx semantic-release
