--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "@commitlint/cli": "^18.4.1",
     "@commitlint/config-conventional": "^18.4.0",
-    "husky": "^8.0.3"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^22.0.7"
   }
 }
